design: edit white spaces

--- a/assets/styles/frontend/common/components/wrap/well.less
+++ b/assets/styles/frontend/common/components/wrap/well.less
@@ -3,7 +3,8 @@
     margin-bottom: @margin-gap;
     padding: 20px;
 
-    background: @color-box;
+    background-color: @color-box;
+    border-radius: @radius;
 
     &--big-padding {
         @media @query-lg {
