--- a/templates/Front/Content/Brand/list.html.twig
+++ b/templates/Front/Content/Brand/list.html.twig
@@ -7,9 +7,9 @@
 {% block main_content %}
     <div class="web__line">
         <div class="web__container">
-            <h1>{{ 'Přehled značek'|trans }}</h1>
+            <div class="wrap-page">
+                <h1>{{ 'Přehled značek'|trans }}</h1>
 
-            <div>
                 <ul class='list-images'>
                     {% for brand in brands %}
                         <li class="list-images__item">
