--- a/assets/styles/frontend/common/main.less
+++ b/assets/styles/frontend/common/main.less
@@ -53,6 +53,7 @@
 @import "components/wrap/article.less";
 @import "components/wrap/box.less";
 @import "components/wrap/gradient.less";
+@import "components/wrap/page.less";
 @import "components/wrap/well.less";
 
 //// in
