--- a/templates/Front/Content/Login/loginForm.html.twig
+++ b/templates/Front/Content/Login/loginForm.html.twig
@@ -13,29 +13,30 @@
     {{ form_start(form, {attr: {'multipleForm': true}}) }}
         <div class="web__line">
             <div class="web__container">
+                <div class="wrap-page">
+                    <h1 class="in-title in-title--big in-title--center">{{ 'Login'|trans }}</h1>
 
-                <h1 class="in-title in-title--big in-title--center">{{ 'Login'|trans }}</h1>
-
-                <div class="wrap-well wrap-well--big-padding">
-                    <div class="wrap-article__row">
-                        <div class="wrap-article__row__full padding-bottom-10">
-                            {{ form_errors(form) }}
+                    <div class="wrap-well wrap-well--big-padding">
+                        <div class="wrap-article__row">
+                            <div class="wrap-article__row__full padding-bottom-10">
+                                {{ form_errors(form) }}
+                            </div>
                         </div>
-                    </div>
-                    <div class="wrap-article__row">
-                        <div class="wrap-article__row__half">
-                            {{ form_row(form.email, { label: 'E-mail'|trans }) }}
+                        <div class="wrap-article__row">
+                            <div class="wrap-article__row__half">
+                                {{ form_row(form.email, { label: 'E-mail'|trans }) }}
+                            </div>
+                            <div class="wrap-article__row__half">
+                                {{ form_row(form.password, { label: 'Heslo'|trans }) }}
+                            </div>
                         </div>
-                        <div class="wrap-article__row__half">
-                            {{ form_row(form.password, { label: 'Heslo'|trans }) }}
-                        </div>
-                    </div>
-                    <div class="wrap-article__row">
-                        <div class="wrap-article__row__half padding-top-15 padding-bottom-15">
-                            <a href="{{ url('front_registration_reset_password') }}"><span>{{ 'Forgot your password?'|trans }}</span></a>
-                        </div>
-                        <div class="wrap-article__row__half text-right">
-                            {{ form_widget(form.login, {label: 'Log in'|trans}) }}
+                        <div class="wrap-article__row">
+                            <div class="wrap-article__row__half padding-top-15 padding-bottom-15">
+                                <a href="{{ url('front_registration_reset_password') }}"><span>{{ 'Forgot your password?'|trans }}</span></a>
+                            </div>
+                            <div class="wrap-article__row__half text-right">
+                                {{ form_widget(form.login, {label: 'Log in'|trans}) }}
+                            </div>
                         </div>
                     </div>
                 </div>
