--- a/templates/Front/Content/Registration/resetPassword.html.twig
+++ b/templates/Front/Content/Registration/resetPassword.html.twig
@@ -11,22 +11,24 @@
 {% block main_content %}
 <div class="web__line">
     <div class="web__container">
-        <h1 class="in-title in-title--big in-title--center">{{ 'Forgotten password'|trans }}</h1>
+        <div class="wrap-page">
+            <h1 class="in-title in-title--big in-title--center">{{ 'Forgotten password'|trans }}</h1>
 
-        <div class="wrap-well wrap-well--big-padding">
+            <div class="wrap-well wrap-well--big-padding">
 
-            {{ form_errors(form) }}
+                {{ form_errors(form) }}
 
-            {{ form_start(form) }}
-                <div class="wrap-article__row">
-                    <div class="wrap-article__row__half">
-                        {{ form_row(form.email, { label: 'E-mail'|trans, errors_attr: { class: 'form-error--under' } }) }}
+                {{ form_start(form) }}
+                    <div class="wrap-article__row">
+                        <div class="wrap-article__row__half">
+                            {{ form_row(form.email, { label: 'E-mail'|trans, errors_attr: { class: 'form-error--under' } }) }}
+                        </div>
+                        <div class="wrap-article__row__half">
+                            {{ form_widget(form.submit, { label: 'Reset password'|trans, attr: {class: 'btn btn--success'} }) }}
+                        </div>
                     </div>
-                    <div class="wrap-article__row__half">
-                        {{ form_widget(form.submit, { label: 'Reset password'|trans, attr: {class: 'btn btn--success'} }) }}
-                    </div>
-                </div>
-            {{ form_end(form) }}
+                {{ form_end(form) }}
+            </div>
         </div>
     </div>
 </div>
