--- a/templates/Front/Content/Registration/setNewPassword.html.twig
+++ b/templates/Front/Content/Registration/setNewPassword.html.twig
@@ -14,26 +14,28 @@
 {% block main_content %}
 <div class="web__line">
     <div class="web__container">
-        <h1 class="in-title in-title--big in-title--center">{{ 'Set new password'|trans }}</h1>
+        <div class="wrap-page">
+            <h1 class="in-title in-title--big in-title--center">{{ 'Set new password'|trans }}</h1>
 
-        <div class="wrap-well wrap-well--big-padding">
-            {{ form_errors(form) }}
+            <div class="wrap-well wrap-well--big-padding">
+                {{ form_errors(form) }}
 
-            {{ form_start(form) }}
-                <div class="wrap-article__row">
-                    <div class="wrap-article__row__half">
-                        {{ form_row(form.newPassword.first, { label: 'Password'|trans, errors_attr: { class: 'form-error--under' } }) }}
+                {{ form_start(form) }}
+                    <div class="wrap-article__row">
+                        <div class="wrap-article__row__half">
+                            {{ form_row(form.newPassword.first, { label: 'Password'|trans, errors_attr: { class: 'form-error--under' } }) }}
+                        </div>
+                        <div class="wrap-article__row__half">
+                            {{ form_row(form.newPassword.second, { label: 'Password again'|trans, errors_attr: { class: 'form-error--under' } }) }}
+                        </div>
                     </div>
-                    <div class="wrap-article__row__half">
-                        {{ form_row(form.newPassword.second, { label: 'Password again'|trans, errors_attr: { class: 'form-error--under' } }) }}
+                    <div class="wrap-article__row">
+                        <div class="wrap-article__row__full text-right">
+                            {{ form_widget(form.submit, { label: 'Set new password'|trans, attr: {class: 'btn btn--success margin-right-5'} }) }}
+                        </div>
                     </div>
-                </div>
-                <div class="wrap-article__row">
-                    <div class="wrap-article__row__full text-right">
-                        {{ form_widget(form.submit, { label: 'Set new password'|trans, attr: {class: 'btn btn--success margin-right-5'} }) }}
-                    </div>
-                </div>
-            {{ form_end(form) }}
+                {{ form_end(form) }}
+            </div>
         </div>
     </div>
 </div>
