--- a/templates/Front/Content/Order/step3.html.twig
+++ b/templates/Front/Content/Order/step3.html.twig
@@ -23,6 +23,14 @@
                                     {{ 'Informace o zákazníkovi'|trans }}
                                 </h2>
                                 {% set isSelectedPickupPlaceTransport = transport is not empty and (transport.isPickupPlace or transport.isChooseStore) %}
+                                <div class="box-order__info__row">
+                                    <div class="box-order__info__row__item box-order__info__row__item--50">
+                                        {{ form_row(form.firstName, { label: 'First name'|trans }) }}
+                                    </div>
+                                    <div class="box-order__info__row__item box-order__info__row__item--50">
+                                        {{ form_row(form.lastName, { label: 'Last name'|trans }) }}
+                                    </div>
+                                </div>
                                 {{ form_row(form.email, { label: 'E-mail'|trans, attr: {
                                     'data-is-logged-customer': is_granted('ROLE_LOGGED_CUSTOMER'),
                                     'data-url': url('front_login_notice')
@@ -79,13 +87,10 @@
                                 {% if transport.isChooseStore is same as (true) %}
                                     {% set pickupPlaceData = store %}
                                 {% endif %}
-
                                 <span>{{ "Název pobočky"|trans }}</span>&nbsp;{{ pickupPlaceData.name }} <br/>
                                 <span>{{ "Ulice"|trans }}</span>&nbsp;{{ pickupPlaceData.street }} <br/>
                                 <span>{{ "Město"|trans }}</span>&nbsp;{{ pickupPlaceData.city }} <br/>
                                 <span>{{ "PSČ"|trans }}</span>&nbsp;{{ pickupPlaceData.postcode }} <br/>
-                                {% do form.firstName.setRendered %}
-                                {% do form.lastName.setRendered %}
                                 {% do form.deliveryCompanyName.setRendered %}
                                 {% do form.deliveryStreet.setRendered %}
                                 {% do form.deliveryCity.setRendered %}
