--- a/assets/styles/frontend/common/components/box/products-slider.less
+++ b/assets/styles/frontend/common/components/box/products-slider.less
@@ -18,6 +18,20 @@
 
             font-size: 36px;
         }
+
+        &--secondary {
+            line-height: 30px;
+            text-align: left;
+            margin-bottom: 0;
+
+            font-size: @font-size-big;
+            text-transform: uppercase;
+            color: @color-base;
+
+            @media @query-xl {
+                padding-left: 70px;
+            }
+        }
     }
 
     &__subtitle {
