--- a/assets/styles/frontend/common/components/table/cart.less
+++ b/assets/styles/frontend/common/components/table/cart.less
@@ -18,6 +18,10 @@
         @media @query-lg {
             padding: 14px 30px;
         }
+
+        &::last-child {
+            margin-bottom: 0;
+        }
     }
 
     &__content {
@@ -217,6 +221,7 @@
         &__gift {
             display: block;
             margin-top: 5px;
+            padding-left: 20px;
             
             &__block {
                 display: inline-block;
