--- a/assets/styles/frontend/common/components/wrap/gradient.less
+++ b/assets/styles/frontend/common/components/wrap/gradient.less
@@ -6,6 +6,10 @@
     background: linear-gradient(90deg, #277da8 0%, #58b6a7 33%, #9bc962 66%, #5da94b 100%);
     border-radius: @radius;
 
+    &--with-gap {
+        margin-bottom: 30px;
+    }
+
     &__in {
         padding: 20px;
 
