--- a/assets/styles/frontend/common/core/form/input.less
+++ b/assets/styles/frontend/common/core/form/input.less
@@ -70,7 +70,7 @@
     top: 5px;
     left: @input-padding-horizontal;
     display: block;
-    z-index: @z-index-above;
+    z-index: @z-index-above + 1;
 
     font-size: @input-font-size-label;
     font-family: @font-alt;
