--- a/templates/Front/Content/Product/filterFormMacro.html.twig
+++ b/templates/Front/Content/Product/filterFormMacro.html.twig
@@ -140,7 +140,7 @@
                             <div class="js-product-filter-parameter">
                                 <div class="box-filter__choice js-product-filter-box" id="{{ parameterForm.vars.id }}">
                                     <span class="box-filter__choice__title js-product-filter-parameter-label js-responsive-toggle" data-element="filter-{{ parameterForm.vars.id }}">
-                                        {{ parameterForm.vars.label }} ({{ parameterForm|length }})
+                                        {{ parameterForm.vars.label }}
                                         <i class="svg svg-triangle"></i>
                                     </span>
                                     <div class="box-filter__choice__content display-none" id="filter-{{ parameterForm.vars.id }}">
