--- a/templates/Front/Content/WatchDog/watchDogLink.html.twig
+++ b/templates/Front/Content/WatchDog/watchDogLink.html.twig
@@ -1,4 +1,4 @@
-<a class="js-watch-dog-window-opener" data-url="{{ url('front_watch_dog_window_form', {'productId': product.Id}) }}">
+<a class="box-detail__watch-dog js-watch-dog-window-opener" data-url="{{ url('front_watch_dog_window_form', {'productId': product.Id}) }}">
     {% if product.calculatedSellingDenied %}
         {{ 'Hlídat dostupnost a cenu'|trans }}
     {% else %}
