--- a/assets/styles/frontend/common/components/box/cart.less
+++ b/assets/styles/frontend/common/components/box/cart.less
@@ -12,7 +12,7 @@
     }
 
     &__info {
-        padding: 5px 5px 20px;
+        padding: 5px;
         margin-bottom: @box-cart-info-gap;
 
         border-radius: @radius;
