--- a/assets/styles/frontend/common/components/box/detail.less
+++ b/assets/styles/frontend/common/components/box/detail.less
@@ -292,6 +292,20 @@
         }
     }
 
+    &__watch-dog {
+        display: block;
+        width: 100%;
+        margin-top: 20px;
+        text-align: center;
+        line-height: 19px;
+
+        font-size: @font-size-extra-small;
+        font-weight: 400;
+        text-transform: uppercase;
+        text-decoration: underline;
+        color: @color-base;
+    }
+
     &__catnumber {
         text-align: right;
 
