--- a/assets/styles/frontend/common/components/box/search.less
+++ b/assets/styles/frontend/common/components/box/search.less
@@ -13,6 +13,12 @@
 
         text-transform: uppercase;
         font-size: 16px;
+
+        &--big-gap-mobile {
+            @media @query-tablet {
+                margin-bottom: 40px;
+            }
+        }
     }
 
     &__navigation {
