--- a/assets/styles/frontend/common/components/in/user-text.less
+++ b/assets/styles/frontend/common/components/in/user-text.less
@@ -176,14 +176,12 @@
             tr td {
                 background-color: @color-box;
                 font-weight: 700;
-                text-align: center;
             }
         }
 
         tr td {
             padding: 10px;
             line-height: 16px;
-            text-align: center;
 
             font-size: @in-user-text-font-size;
             border: 1px solid @color-border;
@@ -192,5 +190,10 @@
                 text-align: left;
             }
         }
+    }
+
+    iframe {
+        width: 100%;
+        max-width: 560px;
     }
 }
