--- a/assets/styles/frontend/common/components/list/prelist-categories.less
+++ b/assets/styles/frontend/common/components/list/prelist-categories.less
@@ -99,6 +99,7 @@
 
         &__info {
             line-height: 34px;
+            text-align: center;
 
             font-size: @font-size;
             font-weight: 700;
