--- a/assets/styles/frontend/common/components/wrap/box.less
+++ b/assets/styles/frontend/common/components/wrap/box.less
@@ -43,7 +43,8 @@
 
     &--narrow {
         @media @query-lg {
-            width: 600px;
+            max-width: 800px;
+            width: 100%;
             margin: 0 auto 20px auto;
         }
     }
