--- a/assets/styles/frontend/common/libs/selectric/selectric.less
+++ b/assets/styles/frontend/common/libs/selectric/selectric.less
@@ -93,7 +93,7 @@
 }
 
 .selectric-open {
-    z-index: 9999;
+    z-index: @z-index-above;
 
     .selectric {
         border-color: @selectric-border-color-hover;
