--- a/templates/Front/Content/Order/preview.html.twig
+++ b/templates/Front/Content/Order/preview.html.twig
@@ -217,7 +217,7 @@
                         {% if isPaymentAndTransportFree %}
                             {{ 'Výborně, od nás máte'|trans }}&nbsp;<span class="in-action__free-transport__colored-text">{{ 'dopravu zdarma!'|trans }}</span>
                         {% else %}
-                            {{ 'Nakupte ještě za'|trans }}&nbsp;<span class="in-action__free-transport__colored-text">{{ remainingPriceWithVat|price }}</span>&nbsp;{{ 'a máte'|trans }}&nbsp;
+                            {{ 'Nakupte ještě za'|trans }}&nbsp;<span class="in-action__free-transport__colored-text">{{ remainingPriceWithVat|price }}</span>&nbsp;{{ 'a máte'|trans }}
                             <span class="in-action__free-transport__colored-text">{{ 'dopravu zdarma!'|trans }}</span>
                         {% endif %}
                     </div>
