--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -296,7 +296,7 @@
                                                 {{ image(productGroup.item, { size: 'listSet' }) }}
                                                 {% if productGroup.itemCount > 1 %}
                                                     <div class="list-tags list-tags--secondary list-tags--sets-detail">
-                                                        <div class="list-tags__tag">{{ productGroup.itemCount ~ 'x' }}</div>
+                                                        <div class="list-tags__tag">{{ productGroup.itemCount }} {{ 'ks'|trans }}</div>
                                                     </div>
                                                 {% endif %}
                                             </div>
