design: change font-size of price in the product list

--- a/assets/styles/frontend/common/components/list/products-slider.less
+++ b/assets/styles/frontend/common/components/list/products-slider.less
@@ -273,7 +273,7 @@
                 align-items: center;
 
                 color: @color-price;
-                font-size: @font-size-small;
+                font-size: @font-size-big;
                 font-weight: 700;
 
                 &__main {
