--- a/assets/styles/frontend/common/components/box/detail.less
+++ b/assets/styles/frontend/common/components/box/detail.less
@@ -284,8 +284,11 @@
         }
 
         &--variant {
-            padding: 15px;
+            padding: 0;
             margin-bottom: 30px;
+
+            background-color: transparent;
+            border-radius: 0;
         }
     }
 
