--- a/assets/styles/frontend/common/components/in/discount-message.less
+++ b/assets/styles/frontend/common/components/in/discount-message.less
@@ -6,7 +6,7 @@
     align-items: center;
     margin: -20px 0 @in-discount-message-gap;
     width: 100%;
-    padding: 10px 40px;
+    padding: 10px 15px;
     line-height: 18px; 
 
     border-radius: @radius;
@@ -14,6 +14,10 @@
     font-family: @font-alt;
     font-weight: 600;
     font-size: @font-size + 1px;
+
+    @media @query-lg {
+        padding: 10px 40px;
+    }
 
     @media @query-vl {
         width: calc(~"100% + (@{in-discount-message-side-margin} * 2)");
