--- a/assets/styles/frontend/common/components/list/variants.less
+++ b/assets/styles/frontend/common/components/list/variants.less
@@ -2,7 +2,7 @@
 @list-variants-image-size: 70px;
 @list-variants-item-gap: 15px;
 @list-variants-item-prices-size: 24px;
-@list-variants-item-parameters-item-name-width: 90px;
+@list-variants-item-parameters-item-name-width: 70px;
 @list-variants-item-description-availability-width: 60%;
 
 .list-variants {
@@ -13,10 +13,10 @@
         flex-direction: row;
         flex-wrap: wrap;
         margin-bottom: 20px;
+        padding: 15px;
 
-        @media @query-lg {
-            margin-bottom: 45px;
-        }
+        border-radius: @radius;
+        background-color: @color-box;
 
         &:last-child {
             margin-bottom: 0;
@@ -24,11 +24,15 @@
 
         &__info {
             width: 100%;
-            padding: 10px 25px;
+            padding: 10px 15px;
             margin-bottom: 20px;
 
             border-radius: @radius;
             background-color: @color-f;
+
+            @media @query-lg {
+                padding: 10px 25px;
+            }
         }
 
         &__description {
@@ -109,7 +113,7 @@
 
                 border-bottom: 1px solid @color-border;
                 font-family: @font-alt;
-                font-size: @font-size-extra-small + 1px;
+                font-size: 12px;
 
                 @media @query-md {
                     width: @calc-base / 2;
@@ -122,7 +126,7 @@
                 &__name {
                     width: @list-variants-item-parameters-item-name-width;
                     display: block;
-                    padding-right: 10px;
+                    padding-right: 5px;
                 }
 
                 &__value {
